--- a/ReconTest/app/src/main/AndroidManifest.xml
+++ b/ReconTest/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="unsw.phd.jaybie.recontest">
-
+    <uses-permission android:name="android.permission.CAMERA" />
+    //<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    //<uses-permission android:name="android.permission.BLUETOOTH" />
+    //<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
