--- a/ReconTest/app/src/main/AndroidManifest.xml
+++ b/ReconTest/app/src/main/AndroidManifest.xml
@@ -2,9 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="unsw.phd.jaybie.recontest">
     <uses-permission android:name="android.permission.CAMERA" />
-    //<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    //<uses-permission android:name="android.permission.BLUETOOTH" />
-    //<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
